--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -2,10 +2,11 @@
 
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/textView2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/_14sdp"
+    android:padding="@dimen/_8sdp"
     android:textStyle="bold"
-    android:textSize="@dimen/_14ssp"
-    android:text="TextView" />
+    android:textSize="@dimen/_12ssp"
+    tools:text="TextView" />
