--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -14,95 +14,117 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:drawableStart="@drawable/rafik_logo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/rafik_logo">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
                 style="@style/MyToolbar"
-                app:menu="@menu/top_app_bar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize">
-            </com.google.android.material.appbar.MaterialToolbar>
-
-
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/top_app_bar" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            >
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/product_type_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:text="@string/product_type"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:textStyle="bold"
-                android:textSize="@dimen/_16ssp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Spinner
-                android:id="@+id/product_type_spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_32sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/product_type_tv"
-                app:layout_constraintTop_toBottomOf="@+id/product_type_tv" />
+                <TextView
+                    android:id="@+id/product_type_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_24sdp"
+                    android:text="@string/product_type"
+                    android:textSize="@dimen/_16ssp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
-            <TextView
-                android:id="@+id/training_places_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_16sdp"
-                android:text="@string/training_places"
-                android:layout_marginTop="@dimen/_16sdp"
-                android:textSize="@dimen/_16ssp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/product_type_spinner" />
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/product_type_spinner_card"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/product_type_tv"
+                    app:layout_constraintEnd_toEndOf="@+id/places_type_spinner_card"
+                    app:layout_constraintStart_toStartOf="@+id/places_type_spinner_card"
+                    app:layout_constraintTop_toTopOf="@+id/product_type_tv"
+                    app:strokeWidth="1dp">
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/product_type_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        tools:layout_height="?attr/dropdownListPreferredItemHeight" />
+
+                </com.google.android.material.card.MaterialCardView>
+
+                <TextView
+                    android:id="@+id/training_places_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_16sdp"
+                    android:layout_marginTop="@dimen/_24sdp"
+                    android:text="@string/training_places"
+                    android:textSize="@dimen/_16ssp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/product_type_spinner_card" />
 
 
-            <Spinner
-                android:id="@+id/training_places_spinner"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/_32sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/product_type_tv"
-                app:layout_constraintTop_toBottomOf="@+id/training_places_tv" />
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/places_type_spinner_card"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/_16sdp"
+                    app:cardCornerRadius="10dp"
+                    app:cardElevation="4dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/training_places_tv"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/training_places_tv"
+                    app:layout_constraintTop_toTopOf="@+id/training_places_tv"
+                    app:strokeWidth="1dp"
+                    >
+
+                    <androidx.appcompat.widget.AppCompatSpinner
+                        android:id="@+id/training_places_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:elevation="80dp"
+                        android:orientation="horizontal"
+                        android:popupElevation="8dp"
+                        tools:layout_height="?attr/dropdownListPreferredItemHeight" />
+
+                </com.google.android.material.card.MaterialCardView>
 
 
-            <Button
-                android:id="@+id/send_request_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/_45sdp"
-                android:layout_marginHorizontal="@dimen/_24sdp"
-                android:backgroundTint="@color/base_green_color"
-                android:text="@string/send_request"
-                android:textSize="@dimen/_14ssp"
-                app:cornerRadius="@dimen/_15sdp"
-                android:layout_marginTop="@dimen/_16sdp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/training_places_spinner"
-                app:strokeColor="@color/base_green_color" />
+                <Button
+                    android:id="@+id/send_request_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_45sdp"
+                    android:layout_marginHorizontal="@dimen/_24sdp"
+                    android:layout_marginTop="@dimen/_24sdp"
+                    android:backgroundTint="@color/base_green_color"
+                    android:text="@string/send_request"
+                    android:textSize="@dimen/_14ssp"
+                    app:cornerRadius="@dimen/_15sdp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/places_type_spinner_card"
+                    app:strokeColor="@color/base_green_color" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.core.widget.NestedScrollView>
