--- a/app/src/main/res/layout/fragment_training.xml
+++ b/app/src/main/res/layout/fragment_training.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewModel"
+            type="com.example.rafik.ui.training.TrainingViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -119,6 +121,7 @@
                     android:text="@string/send_request"
                     android:textSize="@dimen/_14ssp"
                     app:cornerRadius="@dimen/_15sdp"
+                    android:onClick="@{()->viewModel.sendRequest()}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/places_type_spinner_card"
