--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/splashScreen">
 
     <fragment
         android:id="@+id/splashScreen"
@@ -35,6 +35,9 @@
             app:destination="@id/signInFragment"
             app:popUpTo="@id/splashScreen"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_homeFragment_to_sellProductFragment"
+            app:destination="@id/sellProductFragment" />
     </fragment>
     <fragment
         android:id="@+id/organicFertilizerFragment"
@@ -67,4 +70,9 @@
             app:popUpTo="@id/splashScreen"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        tools:layout="@layout/fragment_sell_product"
+        android:id="@+id/sellProductFragment"
+        android:name="com.example.rafik.ui.sell_product.SellProductFragment"
+        android:label="SellProductFragment" />
 </navigation>
