--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -20,7 +20,7 @@
                 style="@style/MyToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:menu="@menu/top_app_bar" />
+                app:menu="@menu/top_home_bar_menu" />
 
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -128,18 +128,6 @@
                         android:textSize="@dimen/_18ssp" />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
-
-                <Button
-                    android:id="@+id/sign_out"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/signout"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/contact_us_layout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/contact_us_layout"
-                    app:layout_constraintVertical_bias="0.04000002" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
