--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -56,4 +56,9 @@
     <color name="night_toolbar_background">#282929</color>
     <color name="toolbar_text_color">#0bcbff</color>
     <color name="base_green_color">#7CC644</color>
+    <!--colors for light mode-->
+    <color name="contentBodyColor">#FCFCFC</color>
+    <color name="contentTextColor">#020000</color>
+    <color name="imageBorderColor">#E01E7A</color>
+    <color name="miniTitle">#2A2E43</color>
 </resources>
