--- a/app/src/main/res/layout/fragment_otp_auth.xml
+++ b/app/src/main/res/layout/fragment_otp_auth.xml
@@ -100,6 +100,7 @@
             style="@style/loginButton"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/login_button_bk"
+            android:enabled="false"
             android:text="@string/verify_code"
             android:textColor="@color/white"
             app:initialCornerAngle="27dp"
