--- a/app/src/main/res/layout/fragment_sell_product.xml
+++ b/app/src/main/res/layout/fragment_sell_product.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.example.rafik.ui.sell_product.SellProductViewModel" />
@@ -15,17 +16,16 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:drawableStart="@drawable/rafik_logo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/rafik_logo">
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
                 style="@style/MyToolbar"
-                app:menu="@menu/top_app_bar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize">
-            </com.google.android.material.appbar.MaterialToolbar>
+                android:layout_height="?attr/actionBarSize"
+                app:menu="@menu/top_app_bar"></com.google.android.material.appbar.MaterialToolbar>
 
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -59,9 +59,9 @@
                     <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:paddingVertical="@dimen/_8sdp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        android:paddingVertical="@dimen/_8sdp"
                         app:layout_constraintHorizontal_bias="0.5"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
@@ -85,7 +85,8 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:inputType="number|numberDecimal" />
+                                android:inputType="number|numberDecimal"
+                                android:text="@={viewModel.amount}" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -95,18 +96,19 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/_32sdp"
+                            android:layout_marginTop="@dimen/_28sdp"
                             android:hint="@string/product_type"
-                            android:layout_marginTop="@dimen/_12sdp"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/pickImg">
+                            app:layout_constraintTop_toBottomOf="@+id/add_image_tv">
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/product_type_text_field"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:inputType="number|numberDecimal" />
+                                android:inputType="number|numberDecimal"
+                                android:text="@={viewModel.productType}" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -127,8 +129,8 @@
                                 android:id="@+id/price_text_field"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-
-                                android:gravity="center" />
+                                android:gravity="center"
+                                android:text="@={viewModel.price}" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -149,7 +151,8 @@
                                 android:id="@+id/address_text_field"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="center" />
+                                android:gravity="center"
+                                android:text="@={viewModel.address}" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -157,9 +160,9 @@
                             android:id="@+id/date"
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             android:layout_width="match_parent"
-                            android:layout_marginTop="@dimen/_12sdp"
                             android:layout_height="wrap_content"
                             android:layout_marginHorizontal="@dimen/_32sdp"
+                            android:layout_marginTop="@dimen/_12sdp"
                             android:hint="@string/production_date"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +172,8 @@
                                 android:id="@+id/date_"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:gravity="center" />
+                                android:gravity="center"
+                                android:text="@={viewModel.productionDate}" />
 
                         </com.google.android.material.textfield.TextInputLayout>
 
@@ -178,9 +182,9 @@
                             android:id="@+id/add_image_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="@dimen/_2sdp"
                             android:text="@string/add_image"
                             android:textSize="@dimen/_16ssp"
-                            android:layout_marginTop="@dimen/_2sdp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="@+id/product_type_text_layout"
                             app:layout_constraintTop_toTopOf="@+id/pickImg" />
@@ -198,12 +202,52 @@
                             app:layout_constraintEnd_toEndOf="@+id/product_type_text_layout"
                             app:layout_constraintTop_toTopOf="parent" />
 
+                        <ImageView
+                            android:id="@+id/productImage"
+                            android:layout_width="@dimen/_32sdp"
+                            android:layout_height="@dimen/_32sdp"
+                            android:clickable="true"
+                            android:contentDescription="@string/add_image"
+                            android:focusable="true"
+                            android:visibility="gone"
+                            app:imgUri="@{viewModel.imageUri}"
+                            app:layout_constraintEnd_toEndOf="@+id/product_type_text_layout"
+                            app:layout_constraintTop_toTopOf="parent"
+                            tools:src="@drawable/ic_image" />
+
+                        <TextView
+                            android:id="@+id/delete_image"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:clickable="true"
+                            android:layout_marginBottom="@dimen/_4sdp"
+                            android:focusable="true"
+                            android:visibility="gone"
+                            android:text="@string/remove_photo"
+                            android:textColor="#2196F3"
+                            app:layout_constraintBottom_toTopOf="@+id/product_type_text_layout"
+                            app:layout_constraintEnd_toEndOf="@+id/productImage"
+                            app:layout_constraintStart_toStartOf="@+id/productImage"
+                            app:layout_constraintTop_toBottomOf="@+id/productImage" />
+
+                        <ProgressBar
+                            android:id="@+id/image_progress_bar"
+                            android:layout_width="@dimen/_30sdp"
+                            android:layout_height="@dimen/_30sdp"
+                            android:layout_marginTop="@dimen/_14sdp"
+                            android:indeterminate="true"
+                            android:indeterminateTint="@color/base_green_color"
+                            android:indeterminateTintMode="src_atop"
+                            android:visibility="gone"
+                            app:layout_constraintEnd_toEndOf="@+id/product_type_text_layout"
+                            app:layout_constraintTop_toTopOf="parent" />
+
                         <com.google.android.material.card.MaterialCardView
                             android:id="@+id/product_type_spinner_card"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_8sdp"
-                            android:layout_marginTop="@dimen/_12sdp"
+                            android:layout_marginTop="@dimen/_24sdp"
                             app:cardCornerRadius="10dp"
                             app:cardElevation="4dp"
                             app:layout_constraintEnd_toEndOf="@+id/date"
@@ -240,6 +284,7 @@
                             android:layout_marginHorizontal="@dimen/_24sdp"
                             android:layout_marginTop="@dimen/_12sdp"
                             android:backgroundTint="@color/base_green_color"
+                            android:onClick="@{()->viewModel.validateAndSendRequest()}"
                             android:paddingVertical="@dimen/_8sdp"
                             android:text="@string/send_request"
                             android:textSize="@dimen/_16ssp"
@@ -248,7 +293,6 @@
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/product_type_spinner_card"
                             app:strokeColor="@color/base_green_color" />
-
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
