otp v4,sign in v3 ,setting v2,auth acivity , splach screan activity ,utils v2,manifest v2

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,12 +49,10 @@
         android:label="SettingsFragment" />
         <action
             android:id="@+id/action_settingsFragment_to_signInFragment"
-            app:destination="@id/signInFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+            app:destination="@id/signInFragment" />
     <fragment
-        tools:layout="@layout/fragment_overview"
         android:id="@+id/overviewFragment"
+        tools:layout="@layout/fragment_overview"
         android:name="com.example.rafik.ui.overview.OverviewFragment"
         android:label="OverviewFragment" />
 </navigation>
